--- a/shippable.yml
+++ b/shippable.yml
@@ -80,6 +80,7 @@ jobs:
                 - GCE_CREDENTIALS_FILE_PATH: "gcp_key.json"
           script:
             - pip install apache-libcloud backports.ssl_match_hostname
+            - pip show pycrypto
             - pushd $(shipctl get_resource_state "gcp_gce_repo")/ansible
             - echo $(shipctl get_integration_resource_field gcp_gce_creds JSON_key) > $GCE_CREDENTIALS_FILE_PATH
             - shipctl replace variables.yml inventory/gce.ini
